@@ -1,10 +1,34 @@
-FROM eclipse-temurin:17-jdk-focal
+# base image to build a JRE
+FROM amazoncorretto:17-alpine as corretto-jdk
 
+# required for strip-debug to work
+RUN apk add --no-cache binutils
+
+# Build small JRE image
+RUN $JAVA_HOME/bin/jlink \
+    --verbose \
+    --add-modules ALL-MODULE-PATH \
+    --strip-debug \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2 \
+    --output /customjre
+
+# main app image
+FROM alpine:latest
+ENV JAVA_HOME=/jre
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=corretto-jdk /customjre $JAVA_HOME
+
+# Add a user
 RUN addgroup --system spring && adduser --system spring && adduser spring spring
 USER spring:spring
 
+# Build an app
 WORKDIR /app
 
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "./app.jar"]
